--- a/front-end/index.html
+++ b/front-end/index.html
@@ -7,82 +7,68 @@
     <script src="https://unpkg.com/vue@3"></script>
     <style>
         body {
-            background: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet);
-            animation: gradient 10s ease infinite;
-            background-size: 400% 400%;
-            color: #fff;
-            margin: 0;
+            background: linear-gradient(135deg, #a18cd1 0%, #fbc2eb 100%);
             min-height: 100vh;
+            margin: 0;
             display: flex;
             justify-content: center;
             align-items: center;
         }
-        @keyframes gradient {
-            0% {background-position: 0% 50%;}
-            50% {background-position: 100% 50%;}
-            100% {background-position: 0% 50%;}
-        }
         .container {
-            max-width: 800px;
+            max-width: 900px;
             margin: 20px;
-            background: rgba(0,0,0,0.5);
+            background: rgba(255,255,255,0.10);
             padding: 20px;
-            border-radius: 8px;
+            border-radius: 16px;
             width: 100%;
-        }
-        input {
-            width: 100%;
-            padding: 8px;
-            margin: 5px 0;
-            border: none;
-            border-radius: 4px;
-        }
-        button {
-            width: 100%;
-            padding: 8px;
-            margin-top: 10px;
-            background: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        button:hover {
-            background: #45a049;
+            box-shadow: 0 8px 32px 0 rgba(31,38,135,0.18);
         }
         #board {
             position: relative;
-            width: 600px;
-            height: 600px;
+            width: 700px;
+            height: 700px;
             margin: 0 auto;
         }
         .avatar-wrapper {
             position: absolute;
-            transition: all 0.5s ease;
+            transition: all 0.5s cubic-bezier(.34,1.56,.64,1);
             text-align: center;
         }
         .avatar {
-            width: 80px;
-            height: 80px;
+            width: 90px;
+            height: 90px;
             border-radius: 50%;
             object-fit: cover;
-            transition: transform 0.3s ease;
+            box-shadow: 0 4px 24px rgba(161,140,209,0.18);
+            border: 2.5px solid #fff;
+            transition: transform 0.3s cubic-bezier(.34,1.56,.64,1), box-shadow 0.2s;
         }
         .avatar:hover {
-            transform: scale(1.1);
+            transform: scale(1.12) rotateZ(-6deg);
+            box-shadow: 0 8px 32px 0 #fbc2eb99, 0 2.5px 16px 0 #a18cd1cc inset;
         }
         .card {
             display: none;
             position: absolute;
-            top: 100%;
+            top: 110%;
             left: 50%;
-            transform: translateX(-50%);
-            background: rgba(0,0,0,0.8);
-            padding: 10px;
-            border-radius: 8px;
+            transform: translateX(-50%) scale(0.95);
+            background: linear-gradient(135deg, #fbc2ebcc 0%, #a6c1eecc 100%);
+            box-shadow: 0 8px 32px 0 rgba(31,38,135,0.27), 0 1.5px 8px 0 rgba(255,255,255,0.2) inset;
+            backdrop-filter: blur(16px);
+            border-radius: 18px;
+            border: 1.5px solid rgba(255,255,255,0.18);
+            padding: 18px 28px 14px 28px;
             white-space: nowrap;
             z-index: 100;
-            min-width: 150px;
+            min-width: 180px;
+            color: #333;
+            animation: popCard 0.3s;
+            box-sizing: border-box;
+        }
+        @keyframes popCard {
+            from { opacity: 0; transform: translateX(-50%) scale(0.7); }
+            to { opacity: 1; transform: translateX(-50%) scale(0.95); }
         }
         .avatar-wrapper:hover .card {
             display: block;
@@ -95,60 +81,62 @@
             z-index: 10;
         }
         .current .avatar {
-            border: 3px solid #fff;
-            box-shadow: 0 0 20px rgba(255,255,255,0.5);
+            border: 3.5px solid #fff;
+            box-shadow: 0 0 32px 0 #a18cd1cc;
         }
         .distance {
             margin-top: 5px;
-            font-size: 12px;
-            color: rgba(255,255,255,0.8);
+            font-size: 13px;
+            color: #a18cd1;
         }
         .user-info {
             margin-top: 5px;
-            font-size: 12px;
+            font-size: 15px;
+            font-weight: bold;
+            letter-spacing: 1px;
         }
         .attribute {
             display: inline-block;
-            padding: 2px 6px;
-            border-radius: 4px;
-            margin-left: 5px;
-            font-size: 12px;
+            padding: 2px 8px;
+            border-radius: 6px;
+            margin-left: 8px;
+            font-size: 14px;
+            color: #fff;
+            background: linear-gradient(90deg, #a18cd1, #fbc2eb);
+            box-shadow: 0 1px 4px #a18cd1cc;
         }
-        .attribute-1 { background: #4CAF50; }
-        .attribute-0 { background: #f44336; }
-        .attribute-side { background: #2196F3; }
+        .attribute-1 { background: linear-gradient(90deg, #4CAF50, #43e97b); }
+        .attribute-0 { background: linear-gradient(90deg, #f44336, #ffb199); }
+        .attribute-side { background: linear-gradient(90deg, #2196F3, #a1c4fd); }
+        .logout {
+            position: absolute;
+            top: 24px;
+            right: 36px;
+            background: rgba(255,255,255,0.7);
+            color: #a18cd1;
+            border: none;
+            border-radius: 8px;
+            padding: 8px 18px;
+            font-size: 16px;
+            font-weight: bold;
+            cursor: pointer;
+            box-shadow: 0 2px 8px #a18cd1cc;
+            transition: background 0.2s, color 0.2s;
+        }
+        .logout:hover {
+            background: #a18cd1;
+            color: #fff;
+        }
     </style>
 </head>
 <body>
 <div id="app" class="container">
-    <div v-if="!user">
-        <h2>登录</h2>
-        <input v-model="nickname" placeholder="昵称">
-        <input type="password" v-model="password" placeholder="密码">
-        <button @click="login">登录</button>
-        <p>还没有账号？<a href="#" @click="showRegister = true">立即注册</a></p>
-    </div>
-    <div v-if="showRegister">
-        <h2>注册</h2>
-        <input v-model="registerForm.nickname" placeholder="昵称">
-        <input type="password" v-model="registerForm.password" placeholder="密码">
-        <input type="file" @change="handleAvatarUpload" accept="image/*">
-        <input v-model="registerForm.height" type="number" placeholder="身高(cm)">
-        <input v-model="registerForm.weight" type="number" placeholder="体重(kg)">
-        <input v-model="registerForm.location" placeholder="所在城市">
-        <select v-model="registerForm.attribute">
-            <option value="1">1</option>
-            <option value="0">0</option>
-            <option value="side">side</option>
-        </select>
-        <button @click="register">注册</button>
-        <button @click="showRegister = false">返回登录</button>
-    </div>
-    <div v-if="user" id="board">
+    <button class="logout" @click="logout">退出登录</button>
+    <div v-if="user && users.length" id="board">
         <div class="avatar-wrapper current">
             <img :src="user.avatar || 'default-avatar.png'" class="avatar">
             <div class="card">
-                <p>{{user.nickname}}</p>
+                <p style="font-size:20px;font-weight:bold;color:#a18cd1;">{{user.nickname}}</p>
                 <p class="user-info">
                     {{user.height}}cm {{user.weight}}kg
                     <span :class="'attribute attribute-' + user.attribute">{{user.attribute}}</span>
@@ -159,13 +147,13 @@
         <div class="avatar-wrapper" v-for="u in users" :key="u.id" :style="getAvatarStyle(u)">
             <img :src="u.avatar || 'default-avatar.png'" class="avatar">
             <div class="card">
-                <p>{{u.nickname}}</p>
+                <p style="font-size:18px;font-weight:bold;color:#f44336;">{{u.nickname}}</p>
                 <p class="user-info">
                     {{u.height}}cm {{u.weight}}kg
                     <span :class="'attribute attribute-' + u.attribute">{{u.attribute}}</span>
                 </p>
                 <p>{{u.location}}</p>
-                <p>{{u.distance ? u.distance.toFixed(1) + ' km' : ''}}</p>
+                <p class="distance">{{u.distance ? u.distance.toFixed(1) + ' km' : ''}}</p>
             </div>
         </div>
     </div>
@@ -176,98 +164,54 @@ const { createApp } = Vue;
 createApp({
     data() {
         return {
-            nickname: '',
-            password: '',
             user: null,
-            users: [],
-            showRegister: false,
-            registerForm: {
-                nickname: '',
-                password: '',
-                avatar: null,
-                height: '',
-                weight: '',
-                location: '',
-                attribute: '1'
-            }
+            users: []
         };
     },
+    mounted() {
+        const userStr = localStorage.getItem('rainbow_user');
+        if (!userStr) {
+            window.location.href = 'login.html';
+            return;
+        }
+        this.user = JSON.parse(userStr);
+        this.loadUsers();
+    },
     methods: {
-        async login() {
-            const resp = await fetch(BASE_URL + '/user/login?nickname=' + this.nickname + '&password=' + this.password, {method:'POST'});
-            if (resp.ok) {
-                this.user = await resp.json();
-                await this.loadUsers();
-                this.arrangeUsers();
-            } else {
-                alert('登录失败');
-            }
-        },
-        async handleAvatarUpload(event) {
-            const file = event.target.files[0];
-            if (!file) return;
-            const formData = new FormData();
-            formData.append('avatar', file);
-            const resp = await fetch(BASE_URL + '/user/uploadAvatar', {
-                method: 'POST',
-                body: formData
-            });
-            if (resp.ok) {
-                this.registerForm.avatar = await resp.text();
-            } else {
-                alert('头像上传失败');
-            }
-        },
-        async register() {
-            const formData = new FormData();
-            formData.append('nickname', this.registerForm.nickname);
-            formData.append('password', this.registerForm.password);
-            formData.append('height', this.registerForm.height);
-            formData.append('weight', this.registerForm.weight);
-            formData.append('location', this.registerForm.location);
-            formData.append('attribute', this.registerForm.attribute);
-            formData.append('avatar', this.registerForm.avatar);
-
-            const resp = await fetch(BASE_URL + '/user/register', {
-                method: 'POST',
-                body: formData
-            });
-
-            if (resp.ok) {
-                alert('注册成功');
-                this.showRegister = false;
-            } else {
-                alert('注册失败');
-            }
-        },
         async loadUsers() {
             const resp = await fetch(BASE_URL + '/user/list/' + this.user.id);
             if (resp.ok) {
-                this.users = await resp.json();
+                let allUsers = await resp.json();
+                // 过滤掉自己
+                this.users = allUsers.filter(u => u.id !== this.user.id);
+                this.arrangeUsers();
             }
         },
         getAvatarStyle(user) {
             if (!user.distance) return {};
             const angle = Math.random() * Math.PI * 2;
-            const distance = Math.min(user.distance * 10, 250);
+            const distance = Math.min(user.distance * 10 + 120, 280);
             const x = Math.cos(angle) * distance;
             const y = Math.sin(angle) * distance;
             return {
-                transform: `translate(${x}px, ${y}px)`,
-                transition: 'all 0.5s ease'
+                transform: `translate(${x}px, ${y}px)`
             };
         },
         arrangeUsers() {
             this.users.forEach(user => {
                 if (user.distance) {
                     const angle = Math.random() * Math.PI * 2;
-                    const distance = Math.min(user.distance * 10, 250);
+                    const distance = Math.min(user.distance * 10 + 120, 280);
                     const x = Math.cos(angle) * distance;
                     const y = Math.sin(angle) * distance;
                     user.x = x;
                     user.y = y;
                 }
             });
+        },
+        logout() {
+            localStorage.removeItem('rainbow_user');
+            window.location.href = 'login.html';
         }
     }
 }).mount('#app');
