--- a/front-end/index.html
+++ b/front-end/index.html
@@ -144,7 +144,7 @@
                 <p>{{user.location}}</p>
             </div>
         </div>
-        <div class="avatar-wrapper" v-for="u in users" :key="u.id" :style="getAvatarStyle(u)">
+        <div class="avatar-wrapper" v-for="(u, idx) in users" :key="u.id" :style="getAvatarStyle(u, idx, users.length)">
             <img :src="u.avatar || 'default-avatar.png'" class="avatar">
             <div class="card">
                 <p style="font-size:18px;font-weight:bold;color:#f44336;">{{u.nickname}}</p>
@@ -155,6 +155,11 @@
                 <p>{{u.location}}</p>
                 <p class="distance">{{u.distance ? u.distance.toFixed(1) + ' km' : ''}}</p>
             </div>
+        </div>
+    </div>
+    <div v-else-if="user && users.length === 0" style="width:700px;height:700px;display:flex;align-items:center;justify-content:center;">
+        <div style="text-align:center;color:#a18cd1;font-size:2rem;font-weight:bold;letter-spacing:2px;background:rgba(255,255,255,0.25);border-radius:18px;padding:48px 36px;box-shadow:0 8px 32px 0 rgba(161,140,209,0.18);backdrop-filter:blur(8px);">
+            当前没有你的天菜哦～
         </div>
     </div>
 </div>
@@ -187,9 +192,9 @@ createApp({
                 this.arrangeUsers();
             }
         },
-        getAvatarStyle(user) {
+        getAvatarStyle(user, idx, total) {
             if (!user.distance) return {};
-            const angle = Math.random() * Math.PI * 2;
+            const angle = (2 * Math.PI * idx) / total;
             const distance = Math.min(user.distance * 10 + 120, 280);
             const x = Math.cos(angle) * distance;
             const y = Math.sin(angle) * distance;
